# money_bot

./: .env.dist  .env.example  .pdm-python  daily_stat.py  main.py  pyproject.toml  requirements.txt  settings.py
app/: container.py  main.py  run.py  settings.py
app/telegram/: polling.py
