[project]
name = "money_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vlad Boiko", email = "acc.v.boiko@gmail.com"},
]
dependencies = ["aiogram>=3.17.0", "dependency-injector>=4.45.0", "python-dotenv>=1.0.1", "pydantic>=2.10.6", "pydantic-settings>=2.7.1", "ruff>=0.9.6"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
